# ICS

./: .gitignore  CMakeLists.txt  IndustrialControlSystem.cpp  IndustrialControlSystem.h  README.md  controller.js  index.html  index.js  main.cpp  main.js  package.json  start.sh
.github/ISSUE_TEMPLATE/: bug_report.md
ICS_Server/: server.py  serverAPI.py
ICS_Server/app/: README.md  app.py  main.py
ICS_Server/app/configuration/: FileConfigurationManager.py  IConfigurable.py  NetworkConfigurations.py
ICS_Server/app/data_base_controller/: IDataBaseController.py  SQLiteController.py
ICS_Server/app/network/: IRpcNetworking.py  NetworkClientModel.py  NetworkConfigurations.py  RpcMethods.py  RpcNetworking.py
app/: authorization_page.html  purchase_sales_page.html
app/css/: authorization_page_styles.css  purchase_sales_style.css
app/js/: authorization_controller.js  global_controller.js  global_variables.js  purchase_sales_controller.js  rpc_networking.js
pages/: authorization_page.html
res/css/: authorization_page_styles.css  index.css
